# dynprops

./: .gitignore  Cargo.toml  LICENSE.APACHE  LICENSE.MIT  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  test.rs  tests.rs  tests_loom.rs
tests/: lazy_static.rs  simple.rs  static_init.rs  tire_shop.rs
