[package]
name = "dynprops"
version = "0.1.0"
authors = ["Dmitry Zamkov <dmitry94@gmail.com>"]
edition = "2018"
description = "Creating and extending objects with typed dynamic properties"
repository = "https://github.com/dzamkov/dynprops"
license = "MIT OR Apache-2.0"
keywords = ["dynamic", "properties"]
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"
static_init = "1.0.1"